profilelist1exp/unpackaged/objects/Opportunity_Details_Extra__c.object
<CustomObject>
    <fields>
        <fullName>UDS_ECS_Workload_Opp__c</fullName>
        <label>UDS ECS Workload (Opp)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UDS_Opp_Includes__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AI/Deep Learning</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Archive</fullName>
                </value>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>Healthcare Application</fullName>
                </value>
                <value>
                    <fullName>IOT</fullName>
                </value>
                <value>
                    <fullName>Life Sciences Technical Application</fullName>
                </value>
                <value>
                    <fullName>Media Tech Apps</fullName>
                </value>
                <value>
                    <fullName>Modern App Development</fullName>
                </value>
                <value>
                    <fullName>ROBO</fullName>
                </value>
                <value>
                    <fullName>Web, Mobile and Social Apps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_ECS_Workload_Secondary__c</fullName>
        <label>UDS ECS Workload (Secondary)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UDS_Opp_Includes__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AI/Deep Learning</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Archive</fullName>
                </value>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>Healthcare Application</fullName>
                </value>
                <value>
                    <fullName>IOT</fullName>
                </value>
                <value>
                    <fullName>Life Sciences Technical Application</fullName>
                </value>
                <value>
                    <fullName>Media Tech Apps</fullName>
                </value>
                <value>
                    <fullName>Modern App Development</fullName>
                </value>
                <value>
                    <fullName>ROBO</fullName>
                </value>
                <value>
                    <fullName>Web, Mobile and Social Apps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_ISR_Driven__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to indicate that this is a UDS ISR Driven deal</inlineHelpText>
        <label>UDS ISR Driven?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UDS_Is_this_a_Cloud_Service_Provider__c</fullName>
        <inlineHelpText>Please indicate if a Cloud Service Provider is engaged on this deal</inlineHelpText>
        <label>UDS Is this a Cloud Service Provider?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_Isilon_Application_Secondary__c</fullName>
        <label>UDS Isilon Application (Secondary)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UDS_Isilon_Workload_Secondary__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AI/Deep Learning -- Intel</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- No GPU</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Nvidia DGX</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- PowerEdge Nvidia</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Server + GPU</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Streaming</fullName>
                </value>
                <value>
                    <fullName>AppDev -- Application Development</fullName>
                </value>
                <value>
                    <fullName>Archive -- Audio Archive</fullName>
                </value>
                <value>
                    <fullName>Archive -- Content -- Satellite Images / GIS</fullName>
                </value>
                <value>
                    <fullName>Archive -- ECM Enterprise Content Management</fullName>
                </value>
                <value>
                    <fullName>Archive -- EIA Enterprise Information Archiving</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive</fullName>
                </value>
                <value>
                    <fullName>Backup -- Enterprise Backup</fullName>
                </value>
                <value>
                    <fullName>Backup -- Enterprise Backup / Source</fullName>
                </value>
                <value>
                    <fullName>Backup -- Enterprise Backup / Target</fullName>
                </value>
                <value>
                    <fullName>Database -- Database</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Automotive -- ADAS</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Automotive -- CAD</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Automotive -- CAE</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Automotive -- Other</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Automotive -- PLM/PDM</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- EDA</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Other Design / Simulation / CAD</fullName>
                </value>
                <value>
                    <fullName>Email -- Email</fullName>
                </value>
                <value>
                    <fullName>EntApps -- CRM</fullName>
                </value>
                <value>
                    <fullName>EntApps -- ERP</fullName>
                </value>
                <value>
                    <fullName>EntApps -- SCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_Isilon_Application__c</fullName>
        <label>UDS Isilon Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UDS_Isilon_Workload__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AI/Deep Learning -- Intel</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- No GPU</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Nvidia DGX</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- PowerEdge Nvidia</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Server + GPU</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Streaming</fullName>
                </value>
                <value>
                    <fullName>AppDev -- Application Development</fullName>
                </value>
                <value>
                    <fullName>Archive -- Audio Archive</fullName>
                </value>
                <value>
                    <fullName>Archive -- Content -- Satellite Images / GIS</fullName>
                </value>
                <value>
                    <fullName>Archive -- ECM Enterprise Content Management</fullName>
                </value>
                <value>
                    <fullName>Archive -- EIA Enterprise Information Archiving</fullName>
                </value>
                <value>
                    <fullName>Archive -- Enterprise Archive</fullName>
                </value>
                <value>
                    <fullName>Backup -- Enterprise Backup</fullName>
                </value>
                <value>
                    <fullName>Backup -- Enterprise Backup / Source</fullName>
                </value>
                <value>
                    <fullName>Backup -- Enterprise Backup / Target</fullName>
                </value>
                <value>
                    <fullName>Database -- Database</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Automotive -- ADAS</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Automotive -- CAD</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Automotive -- CAE</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Automotive -- Other</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Automotive -- PLM/PDM</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- EDA</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>DesignSim -- Other Design / Simulation / CAD</fullName>
                </value>
                <value>
                    <fullName>Email -- Email</fullName>
                </value>
                <value>
                    <fullName>EntApps -- CRM</fullName>
                </value>
                <value>
                    <fullName>EntApps -- ERP</fullName>
                </value>
                <value>
                    <fullName>EntApps -- SCM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_Isilon_GPU_Accelerated_Secondary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UDS Isilon GPU Accelerated (Secondary)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UDS_Isilon_GPU_Accelerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UDS Isilon GPU Accelerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UDS_Isilon_ISV_Secondary__c</fullName>
        <label>UDS Isilon ISV (Secondary)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UDS_Isilon_Application_Secondary__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AI/Deep Learning -- Caffe2</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- CNTK</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- GLUON</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Intel</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Keras</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- MxNet</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Proprietary (Federal)</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Proprietary (Research Inst.)</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- PyTorch</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- SparkML</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- TensorFlow</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Unknown</fullName>
                </value>
                <value>
                    <fullName>Analytics -- AI/Deep Learning -- Nvidia DGX</fullName>
                </value>
                <value>
                    <fullName>Analytics -- AI/Deep Learning -- Other</fullName>
                </value>
                <value>
                    <fullName>Analytics -- AI/Deep Learning -- PowerEdge Nvidia</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics -- Other</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics -- SAP HANA</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics -- SAS-Grid</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics -- Splunk</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics -- Tick Data</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop -- Cloudera</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop -- Hortonworks</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop -- IBM BigInsights</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop -- Other</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Streaming -- Kafka</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Streaming -- Other</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Streaming -- Spark</fullName>
                </value>
                <value>
                    <fullName>AppDev -- Clearcase</fullName>
                </value>
                <value>
                    <fullName>AppDev -- MS Visual Source Safe</fullName>
                </value>
                <value>
                    <fullName>AppDev -- Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_Isilon_ISV__c</fullName>
        <label>UDS Isilon ISV</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UDS_Isilon_Application__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AI/Deep Learning -- Caffe2</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- CNTK</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- GLUON</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Intel</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Keras</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- MxNet</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Proprietary (Federal)</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Proprietary (Research Inst.)</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- PyTorch</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- SparkML</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- TensorFlow</fullName>
                </value>
                <value>
                    <fullName>AI/Deep Learning -- Unknown</fullName>
                </value>
                <value>
                    <fullName>Analytics -- AI/Deep Learning -- Nvidia DGX</fullName>
                </value>
                <value>
                    <fullName>Analytics -- AI/Deep Learning -- Other</fullName>
                </value>
                <value>
                    <fullName>Analytics -- AI/Deep Learning -- PowerEdge Nvidia</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics -- Other</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics -- SAP HANA</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics -- SAS-Grid</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics -- Splunk</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Analytics -- Tick Data</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop -- Cloudera</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop -- Hortonworks</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop -- IBM BigInsights</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Hadoop -- Other</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Streaming -- Kafka</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Streaming -- Other</fullName>
                </value>
                <value>
                    <fullName>Analytics -- Streaming -- Spark</fullName>
                </value>
                <value>
                    <fullName>AppDev -- Clearcase</fullName>
                </value>
                <value>
                    <fullName>AppDev -- MS Visual Source Safe</fullName>
                </value>
                <value>
                    <fullName>AppDev -- Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_Isilon_Other_Secondary__c</fullName>
        <label>UDS Isilon Other (Secondary)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UDS_Isilon_Other__c</fullName>
        <label>UDS Isilon Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UDS_Isilon_Workload_Secondary__c</fullName>
        <label>UDS Isilon Workload (Secondary)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UDS_Opp_Includes__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AI/Deep Learning</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Application Development</fullName>
                </value>
                <value>
                    <fullName>Archive</fullName>
                </value>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Design &amp; Simulation (EDA,Oil&amp;Gas)</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Enterprise Apps (CRM, ERP, SCM)</fullName>
                </value>
                <value>
                    <fullName>Generic NAS Fileshare</fullName>
                </value>
                <value>
                    <fullName>Healthcare Application</fullName>
                </value>
                <value>
                    <fullName>Home Directories / Project Shares</fullName>
                </value>
                <value>
                    <fullName>HPC</fullName>
                </value>
                <value>
                    <fullName>Life Sciences Technical Application</fullName>
                </value>
                <value>
                    <fullName>Media Streaming / Content Delivery</fullName>
                </value>
                <value>
                    <fullName>Media Tech Apps</fullName>
                </value>
                <value>
                    <fullName>Modern App Development</fullName>
                </value>
                <value>
                    <fullName>Surveillance</fullName>
                </value>
                <value>
                    <fullName>Virtual Desktops</fullName>
                </value>
                <value>
                    <fullName>Web Infrastructure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_Isilon_Workload__c</fullName>
        <label>UDS Isilon Workload</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>UDS_Opp_Includes__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AI/Deep Learning</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Application Development</fullName>
                </value>
                <value>
                    <fullName>Archive</fullName>
                </value>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Design &amp; Simulation (EDA,Oil&amp;Gas)</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Enterprise Apps (CRM, ERP, SCM)</fullName>
                </value>
                <value>
                    <fullName>Generic NAS Fileshare</fullName>
                </value>
                <value>
                    <fullName>Healthcare Application</fullName>
                </value>
                <value>
                    <fullName>Home Directories / Project Shares</fullName>
                </value>
                <value>
                    <fullName>HPC</fullName>
                </value>
                <value>
                    <fullName>Life Sciences Technical Application</fullName>
                </value>
                <value>
                    <fullName>Media Streaming / Content Delivery</fullName>
                </value>
                <value>
                    <fullName>Media Tech Apps</fullName>
                </value>
                <value>
                    <fullName>Modern App Development</fullName>
                </value>
                <value>
                    <fullName>Surveillance</fullName>
                </value>
                <value>
                    <fullName>Virtual Desktops</fullName>
                </value>
                <value>
                    <fullName>Web Infrastructure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_MEDDIC_Status__c</fullName>
        <inlineHelpText>What is the current status of MEDDIC for UDS?</inlineHelpText>
        <label>UDS MEDDIC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Endorsed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_Manager_Comments__c</fullName>
        <inlineHelpText>UDS Sales Managers - Capture your comments for this deal in this field</inlineHelpText>
        <label>UDS Manager Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UDS_Migration_Choice__c</fullName>
        <label>UDS Migration Choice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Data Dobi</fullName>
                </value>
                <value>
                    <fullName>Dell EMC PS</fullName>
                </value>
                <value>
                    <fullName>Interlock</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Unknown 3rd Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_Next_Steps__c</fullName>
        <inlineHelpText>UDS Sales Users - Capture your Next Steps for this deal in this field</inlineHelpText>
        <label>UDS Next Steps</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UDS_Notes__c</fullName>
        <inlineHelpText>UDS Sales Users - Capture your notes on this deal in this field</inlineHelpText>
        <label>UDS Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UDS_Opp_Includes__c</fullName>
        <label>UDS Opp Includes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Isilon</fullName>
                </value>
                <value>
                    <fullName>ECS</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>No UDS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_Opportunity_Type__c</fullName>
        <inlineHelpText>Please indicate what type of business this is to UDS</inlineHelpText>
        <label>UDS Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New to UDS</fullName>
                </value>
                <value>
                    <fullName>New to ECS</fullName>
                </value>
                <value>
                    <fullName>New to ISI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_Request_Help__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UDS Request Help?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UDS_Risk__c</fullName>
        <inlineHelpText>What is the level of Risk for this deal for UDS?</inlineHelpText>
        <label>UDS Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS_Test_Drive_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please indicate if a UDS Test Drive was attended for this deal</inlineHelpText>
        <label>UDS Test Drive Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UDS_Who_is_the_Assisted_UDS_AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please indicate the assisting UDS AE</inlineHelpText>
        <label>UDS Who is the Assisted UDS AE?</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Details_Extras5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VROI_Analysis_ID__c</fullName>
        <label>VROI Analysis ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VROI_BVA_Analysis__c</fullName>
        <formula>IF(ISBLANK(VROI_Analysis_ID__c),HYPERLINK(&quot;https://www.visualize-roi.com/vr/simplesamlphp-sp/www/module.php/core/as_login.php?AuthId=UjG34s6qnjYJY46AgSJPU&amp;ReturnTo=https://www.visualize-roi.com/vr/api/saml/login?redirect=https://www.visualize-roi.com/vr/customer/ui/SalesUI/dashboard.html?opportunity_id=&quot;&amp;Id&amp;&quot;&amp;v_id_field=&quot;&amp; VROI_Analysis_ID__c ,&quot;Click Here to Create BVA Analysis&quot;), HYPERLINK(&quot;https://www.visualize-roi.com/vr/simplesamlphp-sp/www/module.php/core/as_login.php?AuthId=UjG34s6qnjYJY46AgSJPU&amp;ReturnTo=https://www.visualize-roi.com/vr/api/saml/login?redirect=https://www.visualize-roi.com/vr/api/salesForce/flowsalesforce/id/&quot;&amp; VROI_Analysis_ID__c &amp;&quot;/vt//sfid/&quot;&amp;Id&amp;&quot;/redirect/newui/v_id_field/VROI_Analysis_ID__c&quot;, &quot;Click Here to Update BVA Analysis&quot;))</formula>
        <label>VROI BVA Analysis</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Details Extra</label>
    <nameField>
        <label>Opportunity Details Extra Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Details Extras</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Save_New_on_Opportunity_Details_Extra</fullName>
        <active>true</active>
        <errorConditionFormula>Opportunity__c = &quot;&quot; &amp;&amp; NOT($Profile.Name = &quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>You cannot create Opportunity Details Extra record manually. Please edit the related Opportunity to create the record automatically</errorMessage>
    </validationRules>
</CustomObject>